--- a/gb/18/8/26/n10667154.md
+++ b/gb/18/8/26/n10667154.md
@@ -1,60 +1,65 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/whu295/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/whu295/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/whu295/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/whu295/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/whu295/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/whu295/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/whu295/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/whu295/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/whu295/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/whu295/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/whu295/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/whu295/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/whu295/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/whu295/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/whu295/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/whu295/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/whu295/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/whu295/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/whu295/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/whu295/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/whu295/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/whu295/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/whu295/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/whu295/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>出席全国义民祭  赖清德强调客家精神与文化</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/08/c62c0fd4a16ff97d56a785bdfbd2a757-600x400.jpg" />
 <h6>行政院长赖清德(中)与客委会主委李永得、新竹县长邱镜淳、议长张镇荣等人，一起恭迎义民爷，举行“安座大典”。（新竹县政府提供）
 </h6>
 <hr>
-<p>【大纪元2018年08月26日讯】（大纪元记者赖月贵台湾新竹报导）一年一度的全国<ahref="https://github.com/whu295/djy/blob/master/gb/tag/%E4%B9%89%E6%B0%91%E7%A5%AD.md#1">义民祭</a>26日在竹县热闹登场，行政院长<ahref="https://github.com/whu295/djy/blob/master/gb/tag/%E8%B5%96%E6%B8%85%E5%BE%B7.md#1">赖清德</a>出席开幕式，致词表示“义民祭”不仅是凝聚客家族群的向心力，也是世代传承的重要文化祭典，而义民的团结精神更是目前台湾最需要的力量，期盼客家乡亲发挥此精神，一起支持台湾大步向前。</p>
-<p><ahref="https://github.com/whu295/djy/blob/master/gb/tag/%E8%B5%96%E6%B8%85%E5%BE%B7.md#1">赖清德</a>指出，<ahref="https://github.com/whu295/djy/blob/master/gb/tag/%E4%B9%89%E6%B0%91%E7%A5%AD.md#1">义民祭</a>开办至今已逾180年，完整保存传统轮值制度与祭仪。文化部于民国104年将义民祭指定为国家重要民俗，交通部也将其列入“台湾观光年历”；因此义民祭是国家级的重要庆典与文化资产，也让国内外民众更认识义民信仰及客家文化。</p>
+<p>【大纪元2018年08月26日讯】（大纪元记者赖月贵台湾新竹报导）一年一度的全国<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%89%E6%B0%91%E7%A5%AD.md#1">义民祭</a>26日在竹县热闹登场，行政院长<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B5%96%E6%B8%85%E5%BE%B7.md#1">赖清德</a>出席开幕式，致词表示“义民祭”不仅是凝聚客家族群的向心力，也是世代传承的重要文化祭典，而义民的团结精神更是目前台湾最需要的力量，期盼客家乡亲发挥此精神，一起支持台湾大步向前。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B5%96%E6%B8%85%E5%BE%B7.md#1">赖清德</a>指出，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%89%E6%B0%91%E7%A5%AD.md#1">义民祭</a>开办至今已逾180年，完整保存传统轮值制度与祭仪。文化部于民国104年将义民祭指定为国家重要民俗，交通部也将其列入“台湾观光年历”；因此义民祭是国家级的重要庆典与文化资产，也让国内外民众更认识义民信仰及客家文化。</p>
 <p>赖清德说，政府透过实施“客家基本法”，打造客语环境并推动“浪漫台三线”，以具体行动振兴客家经济及文化发展，行政院已核定20亿元推动“浪漫台三线”计划，由客委会及相关地方政府落实，盼桃、竹、苗客家庄等重点地区结合生活、人文、生态、产业及观光，振兴经济并带动年轻人返乡，让地方找回光荣感。</p>
-<figure id="10667158" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2018/08/53d5793a73b9db16639826dea84efc66-450x300.jpg" alt="行政院长赖清德和客委会主委李永得、新竹县长邱镜淳、新竹县政府团队以及表演舞者一起合影" width="500" /><figcaption class="wp-caption-text">行政院长赖清德和客委会主委李永得、新竹县长邱镜淳、新竹县政府团队以及表演舞者一起合影，（新竹县政府提供）</figcaption></figure>
+<figure id="10667158" aria-describedby="caption-10667158" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2018/08/53d5793a73b9db16639826dea84efc66-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2018/08/53d5793a73b9db16639826dea84efc66-450x300.jpg" alt="行政院长赖清德和客委会主委李永得、新竹县长邱镜淳、新竹县政府团队以及表演舞者一起合影" width="500" /></a><figcaption id="caption-10667158" class="wp-caption-text">行政院长赖清德和客委会主委李永得、新竹县长邱镜淳、新竹县政府团队以及表演舞者一起合影，（新竹县政府提供）</figcaption></figure>
 <p>赖清德感谢义民祭15大联庄祭典区、客委会及新竹县政府长期致力举办义民祭；新竹县长邱镜淳表示，义民祭不仅凝聚客家社群的向心力，也世代传承客家人的“硬颈精神”。今年的义民祭兼具传统与创新，内容包括：彩绘、义民音乐故事剧、巡回漫画表演以及具备客家核心精神的挑担奉饭活动，并透过客家猪及客家狮呈现新竹县“诸事大吉”（猪狮大吉）。</p>
-<figure id="10667157" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2018/08/0f48b7f7e02b35eeec3bc8c5471dec77-450x298.jpg" alt="行政院长赖清德(中)与客委会主委李永得、新竹县长邱镜淳、议长张镇荣等人，一起上香祈福，保佑国泰民安、风调雨顺" width="500" /><figcaption class="wp-caption-text">行政院长赖清德(中)与客委会主委李永得、新竹县长邱镜淳、议长张镇荣等人，一起上香祈福，保佑国泰民安、风调雨顺。（新竹县政府提供）</figcaption></figure>
-<figure id="attachment_10667159" style="width: 450px" class="wp-caption aligncenter"><ahref="https://github.com/whu295/djy/blob/master/gb/18/8/26/n10667154.md#1/%e7%a5%ad%e5%85%b8%e6%b4%bb%e5%8b%95%e4%b9%8b%e4%b8%80%ef%bc%9a%e7%b2%be%e9%87%87%e7%9a%84%e8%88%9e%e8%b9%88%e8%a1%a8%e6%bc%94" rel="attachment wp-att-10667159"><img class="size-medium wp-image-10667159" src="https://i.epochtimes.com/assets/uploads/2018/08/fc2077f67e17553033158fdcd5b36689-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">祭典活动之一：精彩的舞蹈表演。（新竹县政府提供）</figcaption></figure>
+<figure id="10667157" aria-describedby="caption-10667157" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2018/08/0f48b7f7e02b35eeec3bc8c5471dec77-450x298.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2018/08/0f48b7f7e02b35eeec3bc8c5471dec77-450x298.jpg" alt="行政院长赖清德(中)与客委会主委李永得、新竹县长邱镜淳、议长张镇荣等人，一起上香祈福，保佑国泰民安、风调雨顺" width="500" /></a><figcaption id="caption-10667157" class="wp-caption-text">行政院长赖清德(中)与客委会主委李永得、新竹县长邱镜淳、议长张镇荣等人，一起上香祈福，保佑国泰民安、风调雨顺。（新竹县政府提供）</figcaption></figure>
+<figure id="attachment_10667159" aria-describedby="caption-attachment-10667159" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/26/n10667154.md#1/%e7%a5%ad%e5%85%b8%e6%b4%bb%e5%8b%95%e4%b9%8b%e4%b8%80%ef%bc%9a%e7%b2%be%e9%87%87%e7%9a%84%e8%88%9e%e8%b9%88%e8%a1%a8%e6%bc%94" rel="attachment wp-att-10667159"><img class="size-medium wp-image-10667159" src="https://i.epochtimes.com/assets/uploads/2018/08/fc2077f67e17553033158fdcd5b36689-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-10667159" class="wp-caption-text">祭典活动之一：精彩的舞蹈表演。（新竹县政府提供）</figcaption></figure>
 <p>责任编辑：郑桦</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/6/14/n12184374.md#1">玩陶五十年   陶艺家林良谦以陶冶心以土塑美</a></li>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/6/14/n12183966.md#1">天使般的爱 疗愈系画家施雪红微笑面对病痛</a></li>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/6/13/n12182504.md#1">后疫情县府带头拼经济 公会办演讲激励人心</a></li>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/6/11/n12178045.md#1">抓住荔枝季尾巴！竹市观光果园20日开放</a></li>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/6/11/n12177825.md#1">传承发扬客家文化 明新科大举办学术研讨会</a></li>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/6/10/n12175633.md#1">摔车后手腕痛 小心舟状骨骨折！</a></li>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/6/10/n12175556.md#1">台大生医分院导管室启用 成功抢救猝死病患</a></li>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/6/10/n12175337.md#1">清大13位课外表现杰出学生 获颁行健奖</a></li>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/6/10/n12175294.md#1">时力促成美事 《美力台湾3D》电影车开进校园</a></li>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/6/10/n12175186.md#1">工研院用AI“快筛”海洋废弃物分布</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615941.md#1">徐耀昌走访铜锣窑青年创业基地 体验DIY</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613400.md#1">1966 长照服务伴你左右</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613360.md#1">头屋乡举办植树节活动 4千株树苗免费索取</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13611231.md#1">纪念二二八 林智坚：民主火炬接棒守护台湾</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13611161.md#1">竹市三大赏樱胜地樱花陆续绽放 花期到4月</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608635.md#1">苗栗旅游节“用栗买起来”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13604457.md#1">苗县长勘查草莓裂果灾损 吁尽速争取灾害救助</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13604414.md#1">选择优美说再见、尊严善终 您可以这样做</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/24/n13601564.md#1">鲁冰花季 苗栗茶产业行销</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/24/n13601439.md#1">洋国实业公司捐赠交通车、复康巴士 回馈家乡</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/8/n11098413.md#1" target="_blank">共产暴政录：唐山大地震曾被预测出来</a></li><li><a href="https://github.com/whu295/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/9/n11172449.md#1" target="_blank">法轮功神奇民间心口相传 中共杜撰1400案例</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/8/n10371607.md#1" target="_blank">共产党暴政录：三反五反运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/1/28/n3787603.md#1" target="_blank">钟延：从610副主任难逃610魔咒说起</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/6/13/n12183056.md#1">浙江油罐车大爆炸 致200余人死伤 现场惨烈</a></li>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/6/13/n12182857.md#1">高雄某校全班一半学生上呼吸道感染 市府：停课</a></li>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/6/14/n12183845.md#1">一种疾病在纽约州传播 跟中共肺炎症状相似</a></li>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/6/13/n12182581.md#1">高雄某校1班15人上呼吸道感染 卫生局采检送验</a></li>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/6/13/n12183009.md#1">高雄学生上呼吸道群聚 部分初步检验结果出来了</a></li>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/6/12/n12180561.md#1">TWICE摘第100座冠军 与少女时代并列女团第一</a></li>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/6/12/n12181442.md#1">TWICE成音乐节目夺冠数最多女团 子瑜谢粉丝</a></li>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/6/12/n12181474.md#1">纪念反送中周年 杜汶泽录影片谢台湾撑香港</a></li>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/6/12/n12181747.md#1">宅居在家推美食新歌 方大同《面面》乐翻网友</a></li>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/6/12/n12180256.md#1">东方神起沈昌珉宣布9月结婚 写长文诉心声</a></li>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/5/10/n12097215.md#1">一年三百六十日 风刀霜剑严相逼 黛玉泪尽早夭</a></li>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/3/30/n11989566.md#1">人心与瘟疫 瘟神和疫鬼的传说</a></li>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/6/12/n12180376.md#1">庞贝人的欲望之火 唤醒沉睡千年的维苏威火山</a></li>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/20/6/5/n12163932.md#1">【命理】怎样的命不能与他人共同创业？</a></li>
-<li><a href="https://github.com/whu295/djy/blob/master/gb/9/10/19/n2693924.md#1">还完债后 才能成仙</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/whu295/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/whu295/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/8/26/n10667154.htm">出席全国义民祭  赖清德强调客家精神与文化</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/8/26/n10667154.htm">出席全国义民祭  赖清德强调客家精神与文化</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/whu295/djy/blob/master/gb/18/8/26/n10667154.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/whu295/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/whu295/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/whu295/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/whu295/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/whu295/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/whu295/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/whu295/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/whu295/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/whu295/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/whu295/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/whu295/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/whu295/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/whu295/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/whu295/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/whu295/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/whu295/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/whu295/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/whu295/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/whu295/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/whu295/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/whu295/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/whu295/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/whu295/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/whu295/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/whu295/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/18/8/26/n10667154.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
